# eeg-be

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1d2f6e7a8b9c_add_password_hash_to_users.py  4f2c8a1b9d10_add_account_profile_and_sessions.py  7c8f8f5e0b1a_add_analysis_type_to_jobs.py  9b7a1c2d3e4f_add_analysis_batches.py  c0507c2e9c5b_create_initial_schema.py  eaa4338d6840_seed_mock_users_and_patients.py
app/: main.py
app/api/: account.py  analysis_batches.py  analysis_results.py  auth.py  files.py  users.py
app/core/: analysis_views.py  database.py  file_storage.py  security.py
app/core/models/: analysis_batch.py  analysis_job.py  analysis_result.py  eeg_file.py  patient.py  user.py  user_session.py
app/db/: base.py
